test/tests/ParseError.expected
ParseError.panda:1:1: error: expected a declaration, but found 'void'
1 error
