test/tests/ParseError.panda
void main() {
    Console.printLine("Bad.")
}